.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v4/classSelfMismatch_sqlClass.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/classSelfMismatch_sqlClass.ts(10,52): error TS377046: The `Self` type parameter for this class should be `InvalidModelClass`. effect(classSelfMismatch)


==== /.src/classSelfMismatch_sqlClass.ts (1 errors) ====
    import { Model } from "effect/unstable/schema"
    import {Schema} from "effect"
    
    // valid usage
    export class ValidModelClass extends Model.Class<ValidModelClass>("ValidModelClass")({
      id: Schema.String
    }) {}
    
    // invalid usage: Model.Class<ValidModelClass> should be Model.Class<InvalidModelClass> because the Self type parameter is not the same as the class name
    export class InvalidModelClass extends Model.Class<ValidModelClass>("InvalidModelClass")({
                                                       ~~~~~~~~~~~~~~~
!!! error TS377046: The `Self` type parameter for this class should be `InvalidModelClass`. effect(classSelfMismatch)
      id2: Schema.String
    }) {}
    
